gramatica-organizada.txt
/** Inicio **/
<programa>      ::=  <decl_list>
<decl_list>     ::=  <decl><decl_list_1>
<decl_list_1>   ::=  <decl_list><decl>|<vazio>
<decl>          ::=  <var_decl>|<fun_decl>
<var_decl>      ::=  <type_spec>ID<decl_1>
<type_spec>     ::=   "void"|"float"|"char"|"int"|"double"
<decl_1>        ::=  ";"|"[""]";"
<fun_decl>      ::=  <type_spec>ID"("<params>")"<fun_decl_1> 
<fun_decl_1>    ::=  ";"|<com_stmt>
<params>        ::=  <param_list_2>|"void"|")"
<param_list_2>  ::=  <param><param_list_1>|<vazio>    
<param_list_1>  ::=  ","<param><param_list_1>|<vazio>
<param>         ::=  <type_spec>ID<param_1>
<param_1>       ::=  "[""]"|<vazio>
-
<stmt_list>     ::=  <vazio>|<stmt><stmt_list>
<stmt>          ::=  <exp_stmt>|<com_stmt>|<if_stmt>|<while_stmt>|<return_stmt>|<break_stmt>
<exp_stmt>      ::=  "while""("<exp>")"<stmt>
<com_stmt>      ::=  "{"<local_decls><stmt_list>"}"
<local_decls>   ::=  <vazio>|<local_decl><local_decls>;
<local_decl>    ::=  <type_spec>ID<local_decl_1>
<local_decl_1>  ::=  ";"|"[""]";"
<if_stmt>       ::=  "if""("<exp>")"<stmt><if_stmt_1>
<if_stmt_1>     ::=  <vazio>|"else"<stmt>
<return_stmt>   ::=  "return"<return_stmt_1>
<return_stmt_1> ::=  ";"|<exp>";"
<exp>           ::=  ID<exp_1><exp_3>|"+"<exp><exp_3>|"-"<exp><exp_3>|"!"<exp><exp_3>|FLOAT_LIST<exp_3>|CHAR_LIST<exp_3>|INT_LIST<exp_3> 
<exp_3>         ::=  "||"<exp><exp_3>|"="<exp><exp_3>|"=="<exp><exp_3>|"<="<exp><exp_3>|"<"<exp><exp_3>|">"<exp><exp_3>|">="<exp><exp_3>|"&&"<exp><exp_3>|"+"<exp><exp_3>|"-"<exp><exp_3>|"%"<exp><exp_3>|"*"<exp><exp_3>|"/"<exp><exp_3>|<vazio>
<exp_1>         ::=  "["<exp>"]"<exp_2>|".""sizeof"|"("<args>")"|<vazio>  
<exp_2>         ::=  "="<exp>|<vazio>
<arg_list>      ::=  <exp><arg_list_1>
<arg_list_1>    ::=  ","<exp><arg_list_1>|<vazio>
<args>          ::=  <arg_list>|<vazio>
