src/entities/Sintatic.java
package entities;

import java.util.ArrayList;
import java.util.Arrays;
import java.util.List;

public class Sintatic {

    int pointer = 0;

    private ArrayList<String> error;
    private ArrayList<Lexema> lexema;

    private final List<String> TYPE_SPEC_ARRAY = Arrays.asList("void", "float", "char", "int", "double");

    public ArrayList<String> getError() {
        return this.error;
    }

    public Lexema getItem() {
        if (this.pointer >= this.lexema.size()) {
            Lexema lastItem = this.lexema.get(this.lexema.size() - 1);

            return new Lexema(Token.TK_END, "END", lastItem.getLine());
        }

        return this.lexema.get(this.pointer);
    }

    public void increasePointer() {
        this.pointer += 1;
    }

    public ArrayList<Lexema> filterDirectives(ArrayList<Lexema> lexema) {
        ArrayList<Lexema> newLexema = new ArrayList<Lexema>();

        int index = 0;

        for (Lexema item : lexema) {
            if (!item.getToken().equals(Token.TK_DIRECTIV) &&
                    !item.getToken().equals(Token.TK_CARD) &&
                    !item.getToken().equals(Token.TK_CARDC) &&
                    !item.getToken().equals(Token.TK_COMMENT) &&
                    !item.getToken().equals(Token.TK_COMMENTP)) {
                item.setIndex(index);
                newLexema.add(item);
            }

            index++;
        }

        return newLexema;
    }

    public Sintatic(ArrayList<Lexema> lexema) {
        this.error = new ArrayList<>();
        this.lexema = filterDirectives(lexema);

        this.decl();
    }

    // continue
    public void continueAnaliser() {
        Lexema item = getItem();

        if (item.getToken().equals(Token.TK_END))
            return;

        if (item.getToken().equals(Token.TK_FCH)) {
            this.increasePointer();
            this.continueAnaliser();
            return;
        }

        if (TYPE_SPEC_ARRAY.contains(item.getLexema())) {
            this.decl();
            return;
        }

        if (isKeyWord(item) || item.getToken().equals(Token.TK_ID)) {
            this.stmt();
            this.continueAnaliser();
            return;
        }

        this.error.add("Esperava receber int float ou if for... na linha: " + item.getLine());
        this.errorSkype();
    }

    // error skype
    public void errorSkype() {
        Lexema item = getItem();

        while (!item.getToken().equals(Token.TK_END)) {
            item = getItem();

            if (TYPE_SPEC_ARRAY.contains(item.getLexema())) {
                this.decl();
                return;
            } else if (item.getToken().equals(Token.TK_ABC)) {
                this.com_stmt(false);
                return;
            } else if (this.isKeyWord(item) || item.getToken().equals(Token.TK_ID)) {
                this.stmt();
                errorSkype();
                return;
            } else {
                this.increasePointer();
            }
        }
    }

    public void decl() {
        Lexema item = this.getItem();

        if (TYPE_SPEC_ARRAY.contains(item.getLexema())) {
            this.increasePointer();
            item = this.getItem();

            if (item.getToken().equals(Token.TK_ID)) {
                this.increasePointer();

                this.decl_1();
            } else {
                this.error.add("Esperava receber um ID na linha: " + item.getLine());
                this.errorSkype();
            }
        } else {
            this.error.add("Esperava receber int, float... na linha: " + item.getLine());
            this.errorSkype();
        }
    }

    public void decl_1() {
        Lexema item = this.getItem();

        if (isVardDeclFirst(item)) {
            this.var_decl();
        } else if (isFunDeclFirst(item)) {
            this.fun_decl();
        } else {
            this.error.add("Esperava receber ; [ = , (  na linha: " + item.getLine());
            this.errorSkype();
        }
    }

    public void var_decl() {
        Lexema item = this.getItem();

        if (item.getToken().equals(Token.TK_FDI)) {
            this.increasePointer();
            this.continueAnaliser();
        } else if (item.getToken().equals(Token.TK_VIR)) {
            this.increasePointer();
            item = this.getItem();

            if (item.getToken().equals(Token.TK_ID)) {
                this.increasePointer();
                this.var_decl();
            } else {
                this.error.add("Esperava receber um ID na linha: " + item.getLine());
                this.errorSkype();
            }
        } else if (item.getToken().equals(Token.TK_APR)) {
            this.increasePointer();
            item = this.getItem();

            if (item.getToken().equals(Token.TK_FPR)) {
                this.increasePointer();
                item = this.getItem();

                if (item.getToken().equals(Token.TK_FDI)) {
                    this.increasePointer();
                    this.continueAnaliser();
                } else {
                    this.error.add("Esperava receber ; na linha: " + item.getLine());
                    this.errorSkype();
                }
            } else {
                this.error.add("Esperava receber ] na linha: " + item.getLine());
                this.errorSkype();
            }
        } else if (item.getToken().equals(Token.TK_IG)) {
            this.increasePointer();
            item = this.getItem();

            if (isExpFirst(item)) {
                if (this.exp()) {
                    item = this.getItem();

                    if (item.getToken().equals(Token.TK_FDI)) {
                        this.increasePointer();
                        this.continueAnaliser();
                    } else {
                        this.error.add("Esperava receber ; na linha: " + item.getLine());
                        this.errorSkype();
                    }
                }
            } else {
                this.error.add("Esperava receber um ID + - ! float char ou int na linha: " + item.getLine());
                this.errorSkype();
            }
        } else {
            this.error.add("Esperava receber ; [ = , na linha: " + item.getLine());
            this.errorSkype();
        }
    }

    public void fun_decl() {
        Lexema item = this.getItem();

        if (item.getToken().equals(Token.TK_AP)) {
            this.increasePointer();
            item = this.getItem();

            if (!this.params())
                return;

            item = this.getItem();

            if (!item.getToken().equals(Token.TK_FP)) {
                this.error.add("Esperava receber )  na linha: " + item.getLine());
                this.errorSkype();
                return;
            }
            this.increasePointer();
            item = this.getItem();

            if (item.getToken().equals(Token.TK_FDI)) {
                this.increasePointer();
                this.continueAnaliser();
                return;
            }
            item = this.getItem();

            if (this.isComStmtFirst(item)) {
                this.com_stmt(false);
            } else {
                this.error.add("Esperava receber {  na linha: " + item.getLine());
                this.errorSkype();
            }
        } else {
            this.error.add("Esperava receber (  na linha: " + item.getLine());
            this.errorSkype();
        }
    }

    public boolean local_decl_1() {
        Lexema item = this.getItem();

        if (item.getToken().equals(Token.TK_FDI)) {
            this.increasePointer();
            return this.local_decls();
        } else if (item.getToken().equals(Token.TK_VIR)) {
            this.increasePointer();
            item = this.getItem();

            if (item.getToken().equals(Token.TK_ID)) {
                this.increasePointer();
                return this.local_decl_1();
            } else {
                this.error.add("Esperava receber um ID na linha: " + item.getLine());
                this.errorSkype();
                return false;
            }
        } else if (item.getToken().equals(Token.TK_APR)) {
            this.increasePointer();
            item = this.getItem();

            if (item.getToken().equals(Token.TK_FPR)) {
                this.increasePointer();
                item = this.getItem();

                if (item.getToken().equals(Token.TK_FDI)) {
                    this.increasePointer();
                    return this.local_decls();
                } else {
                    this.error.add("Esperava receber ; na linha: " + item.getLine());
                    this.errorSkype();
                    return false;
                }
            } else {
                this.error.add("Esperava receber ] na linha: " + item.getLine());
                this.errorSkype();
                return false;
            }
        } else if (item.getToken().equals(Token.TK_IG)) {
            this.increasePointer();
            item = this.getItem();

            if (isExpFirst(item)) {
                if (this.exp()) {
                    item = this.getItem();

                    if (item.getToken().equals(Token.TK_FDI)) {
                        this.increasePointer();
                        return this.local_decls();
                    } else {
                        this.error.add("Esperava receber ; na linha: " + item.getLine());
                        this.errorSkype();
                        return false;
                    }
                } else {
                    return false;
                }
            } else {
                this.error.add("Esperava receber um ID + - ! float char ou int na linha: " + item.getLine());
                this.errorSkype();
                return false;
            }
        } else {
            this.error.add("Esperava receber ;  [ = na linha: " + item.getLine());
            this.errorSkype();
            return false;
        }
    }

    public boolean local_decls() {
        Lexema item = this.getItem();

        if (TYPE_SPEC_ARRAY.contains(item.getLexema())) {
            this.increasePointer();
            item = this.getItem();

            if (item.getToken().equals(Token.TK_ID)) {
                this.increasePointer();

                if (this.local_decl_1()) {
                    return true;
                } else {
                    return false;
                }
            } else {
                this.error.add("Esperava receber um ID na linha: " + item.getLine());
                this.errorSkype();
                return false;
            }
        } else {
            return true;
        }
    }

    public boolean com_stmt(boolean get) {
        Lexema item = this.getItem();

        if (item.getToken().equals(Token.TK_ABC)) {
            this.increasePointer();

            if (this.content()) {
                item = this.getItem();

                if (item.getToken().equals(Token.TK_FCH)) {
                    this.increasePointer();

                    if (get) {
                        return true;
                    } else {
                        this.continueAnaliser();
                        return true;
                    }
                } else {
                    this.error.add("Esperava receber } na linha: " + item.getLine());
                    this.errorSkype();
                    return false;
                }
            } else {
                return false;
            }

        } else {
            this.error.add("Esperava receber {  na linha: " + item.getLine());
            this.errorSkype();
            return false;
        }
    }

    public boolean content() {
        Lexema item = this.getItem();

        if (TYPE_SPEC_ARRAY.contains(item.getLexema())) {
            if (this.local_decls())
                return this.content();
            else
                return false;
        } else if (this.isStmtFirst(item)) {
            if (this.stmt())
                return this.content();
            else
                return false;
        } else {
            return true;
        }
    }

    public boolean exp_stmt() {
        Lexema item = this.getItem();

        if (item.getToken().equals(Token.TK_FDI)) {
            this.increasePointer();
            return true;
        }

        if (isExpFirst(item)) {
            if (this.exp()) {
                item = this.getItem();

                if (item.getToken().equals(Token.TK_FDI)) {
                    this.increasePointer();
                    return true;
                } else {
                    this.error.add("Esperava receber ; na linha: " + item.getLine());
                    this.errorSkype();
                    return false;
                }
            } else {
                return false;
            }
        } else {
            return false;
        }
    }

    public boolean if_stmt_1() {
        Lexema item = this.getItem();

        if (item.getLexema().equals("else")) {
            this.increasePointer();
            item = this.getItem();

            if (isStmtFirst(item)) {
                return this.stmt();
            } else {
                this.error.add("Esperava receber um statment na linha: " + item.getLine());
                this.errorSkype();
                return false;
            }
        } else {
            return true;
        }
    }

    public boolean if_stmt() {
        Lexema item = this.getItem();

        if (item.getLexema().equals("if")) {
            this.increasePointer();
            item = this.getItem();

            if (item.getToken().equals(Token.TK_AP)) {
                this.increasePointer();
                item = this.getItem();

                if (isExpFirst(item)) {
                    if (this.exp()) {
                        item = this.getItem();

                        if (item.getToken().equals(Token.TK_FP)) {
                            this.increasePointer();
                            item = this.getItem();

                            if (this.isStmtFirst(item)) {
                                if (this.stmt()) {
                                    if (this.if_stmt_1()) {
                                        return true;
                                    } else {
                                        return false;
                                    }
                                } else {
                                    return false;
                                }
                            } else {
                                this.error.add("Esperava receber um statment na linha: " + item.getLine());
                                this.errorSkype();
                                return false;
                            }
                        } else {
                            this.error.add("Esperava receber ) na linha: " + item.getLine());
